# rust_pi3d

./: Cargo.toml  README.md  cities30.txt  cities80.txt  old_cities.txt
farris/: Cargo.toml
farris/src/: main.rs
forest_walk/: Cargo.toml
forest_walk/src/: main.rs
game/: Cargo.toml
game/src/: main.rs  main_glfails.rs  main_works.rs
pi3d/: Cargo.toml  build.rs
pi3d/examples/: farris.rs  forest_walk.rs  game.rs  minimal.rs  picture_frame.rs  shader_in_src.rs  ship_demo.rs  tsp.rs
pi3d/examples/cities/: cities150.txt  cities200.txt  cities50.txt
pi3d/examples/models/: CargoHoldBaked2.mtl  iss.mtl  rust_pi3d.mtl
pi3d/examples/shaders/: blend_new.fs  blend_new.vs  farris_p67.fs  farris_p67a.fs  farris_p67a.vs  farris_p67b.fs  farris_p67b.vs  farris_p67b_ES30.fs  farris_p67b_ES30.vs  farris_p6_6term.fs  triangle.fs  triangle.vs  uv_light.fs  uv_pointsprite_ES30.vs
pi3d/src/: buffer.rs  camera.rs  display.rs  lib.rs  shader.rs  shape.rs  texture.rs
pi3d/src/shaders/: built_in_shaders.rs  mod.rs
pi3d/src/shapes/: cone.rs  cuboid.rs  cylinder.rs  elevation_map.rs  environment_cube.rs  lathe.rs  lines.rs  merge_shape.rs  mod.rs  model_obj.rs  plane.rs  point_text.rs  points.rs  sphere.rs  string.rs  tcone.rs  torus.rs  tube.rs
pi3d/src/util/: font.rs  mod.rs  offscreen_texture.rs  post_process.rs  resources.rs  vec3.rs  vec4.rs
pyo3_module/: Cargo.toml  README.md  setup.py
pyo3_module/src/: core.rs  lib.rs  shapes.rs  util.rs
pyo3_module/test/: test1.py  test2.py  test3.py
ship_demo/: Cargo.toml
ship_demo/src/: main.rs
tsp/: Cargo.toml
tsp/src/: main.rs
