[package]
name = "rpi3d"
version = "0.1.0"
authors = ["paddywwof <support@eldwick.org.uk>"]

[lib]
name = "rpi3d"
crate-type = ["cdylib"]

[dependencies]
numpy = ">=0.11"
ndarray = "^0.13"
pi3d = {path = "../pi3d"}
gl = "^0.10"

[dependencies.pyo3]
version = ">=0.11.1"
features = ["extension-module"]

[profile.release]
codegen-units = 1
incremental = true